- replaced LPI parameters SCIP_LPPAR_LOBJLIM and SCIP_LPPAR_UOBJLIM by SCIP_LPPAR_OBJLIM

performance improvements:
- use disjoint set to reduce peak memory usage and time to compute of clique table connectedness information
- add and use RESTRICT macro for some pointers
- improved the implementation of SCIPvarGetActiveRepresentatives

fixed bugs:
- fixed bug in feasibility pump heuristic when switching on the usefp20 parameter
- fixed potential ressource leaks in SCIPsolveLinearProb, expr.c, sepa_eccuts, cons_cumulative.c, cons_nonlinear.c

misc:
- dropped support for MOSEK < 7.0.0.0

SCIP version 4.0.1
==================

interface:
- add function SCIPsetSlackVarUb() to control upper bound of slack variable in cons_indicator
- SCIPheurPassIndicator has a new parameter which allows to pass the objective of the solution

parameters:
- new paramter "constraints/indicator/maxsepanonviolated" to stop separation after separation of non violated cuts

features
- added parsing functionality to cardinality constraint handler for CIP format
- added command line option '-o' and command 'validatesolve' in interactive shell
  to validate the solution against an external primal and dual reference value.
- allow to relax objective limit in reoptimization in presolved stage
- suppress excessive printing about numerical troubles in LP on default verblevel (high)
- updated Mosek interface to compile with Mosek 8.1, too
- updates GAMS interface to latest version
- new LP interface to Glop (Google OR tools); CMake only


fixed bugs:
- fixed bug in shift and propagate--variable information with a negation transformation is correctly reset after backtracking
- fixed bug in genvbounds propagator when applying a restart after the root node
- fixed unintended behavior of interrupt signal handler inside SCIP copies
- fixed uninitialized values in SCIP's digraph data structure after calling SCIPdigraphResize()
- fixed memory leak in OSiL reader when using SOS constraints